Bug 100250 - scrollbar has no background trough (gtk+ 3.20)
Summary: scrollbar has no background trough (gtk+ 3.20)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.2.0.0.beta1
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.2
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-07 07:11 UTC by Hussam Al-Tayeb
Modified: 2016-08-18 16:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
libreoffice scrollbar (52.86 KB, image/png)
2016-06-07 07:11 UTC, Hussam Al-Tayeb
Details
Notice the grey background trough in the scrollbar in gedit. (13.66 KB, image/png)
2016-06-07 07:11 UTC, Hussam Al-Tayeb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2016-06-07 07:11:01 UTC
Created attachment 125529 [details]
libreoffice scrollbar

This is libreoffice 5.2.0.0beta1
Comment 1 Hussam Al-Tayeb 2016-06-07 07:11:50 UTC
Created attachment 125530 [details]
Notice the grey background trough in the scrollbar in gedit.

Notice the grey background trough in the scrollbar in gedit.
Comment 2 Buovjaga 2016-06-10 12:08:50 UTC
Not reproduced.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: 2d2a33934ecb952433a635ce5dab76cb2837b8a0
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on June 9th 2016
(I used SAL_USE_VCLPLUGIN=gtk3 to launch)
Comment 3 Hussam Al-Tayeb 2016-06-10 12:12:14 UTC
(In reply to Buovjaga from comment #2)
> Not reproduced.
> 
> Arch Linux 64-bit, KDE Plasma 5
> Version: 5.3.0.0.alpha0+
> Build ID: 2d2a33934ecb952433a635ce5dab76cb2837b8a0
> CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
> Locale: fi-FI (fi_FI.UTF-8)
> Built on June 9th 2016
> (I used SAL_USE_VCLPLUGIN=gtk3 to launch)

Are you using the default gtk+ 3.20 theme (Adwaita) or a 3rd party theme?
Comment 4 Hussam Al-Tayeb 2016-06-11 12:53:04 UTC
As pointed out in bug 100251, this is only reproducible under gtk+ 3.20 with a theme ported to gtk+ 3.20. Hence the default Adwaita theme exhibits this glitch.
Themes for gtk+ 3.18 or older don't.
Comment 5 Buovjaga 2016-08-10 17:45:16 UTC
So which distro are you using? I'm just trying to figure out what is the quickest way to repro this. Is there a distro that out of the box shows this issue?
Comment 6 Hussam Al-Tayeb 2016-08-10 18:11:52 UTC
(In reply to Buovjaga from comment #5)
> So which distro are you using? I'm just trying to figure out what is the
> quickest way to repro this. Is there a distro that out of the box shows this
> issue?

Arch Linux if you have a libreoffice 5.2 build linked against gtk+ 3.20 or higher.

The distro itself doesn't matter. Just make sure you are running gnome 3.20 or higher with gtk+ 3.20 or higher and libreoffice 5.2 linked against gtk+ 3.20.

This is because gtk+ 3.20 different css styling. Adwaita 3.20 exposes this issue in libreoffice (older themes won't).

If this isn't clear, try consulting gtk+ developers in irc.gnome.org #gtk+ channel.
Comment 7 Hussam Al-Tayeb 2016-08-10 18:17:40 UTC
Just to be clear, if you are not using the default gtk+ 3.20 theme (Adwaita), you will NOT see the issue.
The scrollbar in libreoffice still needs to be ported to gtk+ 3.20.
Comment 8 Yousuf Philips (jay) (retired) 2016-08-11 11:28:57 UTC
@Caolan: Any input about this bug in gtk 3.20 theming.
Comment 9 Caolán McNamara 2016-08-11 11:42:31 UTC
Now that I look at it, yeah, its missing. I guess 9885a4f10f6b900a2a870e5fe691c4a465522b75 wasn't sufficient.
Comment 10 Commit Notification 2016-08-11 15:20:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=176111160ddfbe4b6b36b300062bab156d46b211

Resolves: tdf#100250 scrollbar has no bg

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2016-08-18 16:21:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a355897f3efd562b7ac9b962877b6c104cd5a90e&h=libreoffice-5-2

Resolves: tdf#100250 scrollbar has no bg

It will be available in 5.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.