Resolves: tdf#100250 scrollbar has no bg

Change-Id: I48e26b775337809759f8a76be7a9c457c94cd5c9